Test display settings on menu to prevent overflow into text on small screens, was inline, try inline-block

--- a/main.css
+++ b/main.css
@@ -99,7 +99,11 @@ list-style-type: none;
 }
 #menu ul li {
 background: #ffff99; /* soft sand 80% white base colour all menus */
+/*
 display: inline;
+display: block;
+*/
+display: inline-block;
 text-align: center;
 
 }
